@@ -88,7 +88,17 @@ standard_function(int_t function, MalagaState * malagaState)
       utf8::unchecked::advance(startPos, start - 1);
       const char * endPos = startPos;
       utf8::unchecked::advance(endPos, end - (start - 1));
-      push_string_value(startPos, endPos, malagaState);
+      if ((malagaState->value_heap_end - malagaState->value_heap) + 2 + (endPos - startPos) / sizeof(cell_t) >
+          (unsigned int) malagaState->value_heap_size) {
+        // No sufficient amount of heap space for the string -> will do garbage collection
+        // -> copy the original string from Malaga heap to a safe temporary location
+        char * duplicate = strndup(startPos, (endPos - startPos));
+        push_string_value(duplicate, 0, malagaState);
+        free(duplicate);
+      }
+      else {
+        push_string_value(startPos, endPos, malagaState);
+      }
     }
     malagaState->value_stack[malagaState->top - 4] = malagaState->value_stack[malagaState->top - 1];
     malagaState->top -= 3;
