@@ -1,3 +1,7 @@
+2011-11-14 Harri Pitkänen <hatapitk@iki.fi>
+	* Pointer to a string within Malaga heap was used after garbage
+	  collector had compacted the heap, causing corrupted strings.
+
 2011-11-12 Harri Pitkänen <hatapitk@iki.fi>
 	* Add grammar check for misplaced conjunctions
 	* Fix indexing error that caused some autocorrections to be missed
